upgrade cache performance
